--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <audio src="msc/Blonde Redhead   For the Damaged Cod.mp3" autoplay="autoplay" loop="infinite" controls="pause"></audio>
   <div class="container">
     <div>
       <img src="img/titulo.png" alt="titulo" width="500px">
@@ -48,6 +49,7 @@
 
   </div>
   <script src="script.js"></script>
+
 </body>
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
